# feed-spine

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  mkdocs.yml  project_meta.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: BENCHMARK_RESULTS.md  LANGUAGE_PERFORMANCE_ANALYSIS.md  batch_benchmark.py  cython_parsers.pyx  language_comparison.py  multi_lang_benchmark.py  perf_test_filing_parsing.py  perf_test_sec_idx.py  real_filing_benchmark.py
benchmarks/rust_parsers/: Cargo.toml
benchmarks/rust_parsers/src/: lib.rs
benchmarks/test_data/: accession_numbers.txt  unique_ids_100k.txt
checkpoints/: sec-daily-2024-01-15.json
deploy/: README.md
deploy/configs/: .env.example  config.example.yaml
deploy/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml
deploy/kubernetes/base/: configmap.yaml  deployment-api.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service-api.yaml
docker/: .env.example  README.md  docker-compose.yml
docker/init-scripts/postgres/: 01-init.sql
docker/init-scripts/timescale/: 01-init.sql
docs/: API_DESIGN_AND_CONTRACTS.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  DATA_ARCHETYPES_GUIDE.md  DOCUMENTATION_GUIDE.md  FEATURES.md  FEEDSPINE_ENTITYSPINE_INTEGRATION.md  FEEDSPINE_INTEGRATION_ANALYSIS.md  FEED_CONSOLIDATION_OPTIONS.md  PROMPT_FEEDSPINE_V1.md  TIMESTAMP_AND_CAPTURESPINE_INTEGRATION.md  index.md
docs/concepts/: architecture.md  layers.md  protocols.md
docs/contributing/: setup.md
docs/design/: ARCHITECTURE_PATTERNS.md  FEATURE_GAP_ANALYSIS.md  FEEDSPINE_IMPROVEMENTS.md  MARKET_TRENDS.md  MIGRATION_GUIDES.md  PY_SEC_EDGAR_V4_READINESS.md  USE_CASE_DECISION_MATRIX.md  feed-composition-pattern.md  framework-design.md  implementation-roadmap.md  index.md  manifesto.md  python-architecture.md
docs/design/improvements/: CORE_IMPROVEMENTS.md  EVENT_SYSTEM.md  PLUGIN_ARCHITECTURE.md  README.md  STREAMING_PIPELINE.md
docs/design/swot/: BUILD_VS_BUY.md  COMPETITOR_LANDSCAPE.md  COMPLEMENTARY_TOOLS_ANALYSIS.md
docs/domains/: index.md
docs/domains/sec-edgar/: overview.md
docs/features/: EARNINGS_CALENDAR_DESIGN.md
docs/features/8k-release-capture/: README.md
docs/features/cicd-pypi-publishing/: README.md
docs/features/copilot-chat-ingestion/: README.md
docs/features/estimates-vs-actuals/: 01_DESIGN.md  02_IMPLEMENTATION_PLAN.md  03_TEST_PLAN.md  04_EXAMPLES.md  05_SPINE_CORE_INTEGRATION.md  06_CAPTURE_SPINE_INTEGRATION.md  07_TODO.md  README.md
docs/features/modern-earnings-intelligence/: README.md
docs/features/trading-desktop-integration/: README.md
docs/getting-started/: installation.md  quickstart.md
docs/how-to/: custom-feed.md  custom-storage.md  rss-subscriptions.md
docs/intelligence/: index.md  llm-cloud.md  llm-local.md  roadmap.md
docs/stylesheets/: extra.css
docs/tutorials/: first-feed.md
examples/: 01_FINANCIAL_SERVICES_EXAMPLE.md  01_quickstart.py  02_MEDIA_NEWS_AGGREGATION_EXAMPLE.md  02_multi_feed.py  03_ECOMMERCE_PRICE_MONITORING_EXAMPLE.md  03_duckdb_storage.py  04_DEVOPS_MONITORING_EXAMPLE.md  04_sec_edgar_feed.py  05_HEALTHCARE_RESEARCH_EXAMPLE.md  05_entityspine_integration.py  06_SOCIAL_MEDIA_INTELLIGENCE_EXAMPLE.md  06_operational_tracking.py  07_smart_sync_strategy.py  08_auto_key_generation.py  README.md  data_type_storage_example.py
examples/earnings/: 10_earnings_calendar_demo.py  11_earnings_cli_demo.py  12_earnings_python_api_demo.py  13_earnings_rest_api_demo.py  14_earnings_websocket_demo.py  15_earnings_full_workflow.py  README.md
native/sec_parser_rs/: Cargo.toml  README.md
scripts/: gen_ref_pages.py
src/feedspine/: __init__.py  cli.py  discovery.py  pipeline.py  py.typed
src/feedspine/adapter/: __init__.py  base.py  file.py  json.py  rss.py
src/feedspine/api/: __init__.py  fastapi.py
src/feedspine/blob/: __init__.py  filesystem.py
src/feedspine/cache/: __init__.py  memory.py
src/feedspine/composition/: __init__.py  config.py  feed.py  ops.py  preset.py  testing.py
src/feedspine/core/: __init__.py  checkpoint.py  config.py  exceptions.py  feedspine.py  resources.py
src/feedspine/earnings/: __init__.py  service.py
src/feedspine/enricher/: __init__.py  entity_enricher.py  metadata.py  passthrough.py
src/feedspine/executor/: __init__.py  sync.py
src/feedspine/http/: __init__.py  client.py  rate_limiter.py
src/feedspine/metrics/: __init__.py  collector.py
src/feedspine/models/: __init__.py  base.py  content.py  converter.py  feed_run.py  query.py  record.py  sighting.py  task.py
src/feedspine/notifier/: __init__.py  console.py
src/feedspine/protocols/: __init__.py  blob.py  cache.py  enricher.py  executor.py  feed.py  notification.py  progress.py  queue.py  scheduler.py  search.py  storage.py  strategy.py
src/feedspine/queue/: __init__.py  memory.py
src/feedspine/reporter/: __init__.py  rich.py  simple.py
src/feedspine/scheduler/: __init__.py  memory.py
src/feedspine/search/: __init__.py  elasticsearch.py  memory.py
src/feedspine/storage/: __init__.py  data_types.py  duckdb.py  factory.py  memory.py  models.py  observation_storage.py  optimization.py  postgres.py  sqlalchemy_storage.py  sqlite.py
src/feedspine/utils/: __init__.py  keys.py  retry.py  versioning.py
tests/performance/: README.md  test_bulk_performance.py
tests/unit/: __init__.py  test_pipeline.py
tests/unit/adapter/: __init__.py  test_base.py  test_file.py  test_json.py  (+1 more)
(+40 files in other folders)
