[package]
name = "sec_parser_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance SEC filing parser"
license = "MIT"

[lib]
name = "sec_parser_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sec_parser"
path = "src/main.rs"

[dependencies]
# Regex with SIMD support
regex = "1.10"

# Fast parallel processing  
rayon = "1.10"

# Memory mapping
memmap2 = "0.9"

# Fast JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Timing
instant = "0.1"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
